  - (bugfix 756) "assertion (cached)->object.refcount >= 0 failed"
    after HTTP proxy was changed
  - (bugfix) Encode and decode filenames in FSP URLs.
  - (enhancement) FSP progress indicator and password prompt.
  - (bugfix) Support much longer locale-specific timestamps when
    formatting a directory listing.  LC_TIME=fi_FI.UTF-8 now works.
* Changes in parsing and rendering of HTML (without DOM)
  - (bugfix) Use frame->name instead of target avoiding possible segfault.
  - (bugfix 284) Render closing parentheses for HTML elements SUB, SUP
    in the same line; don't let them fall to the next.
  - (enhancement) Show quote characters for HTML element Q, rather
    than italics.
  - (enhancement) Add support for parsing space separated CSS class
    attribute values
  - (bugfix 387) Treat &#013; inside <pre>...</pre> as a newline.
* Changes in parsing and rendering of non-HTML content-types
  - (new feature 121) If a mailcap entry indicates copiousoutput,
    ELinks itself acts as a pager.
  - (new feature 916) If a mailcap entry has no %s, provide the file
    as stdin.
* Changes in the document viewer and tabs
  - (new feature) Highlight links as one enters link prefixes.
  - (new feature) Backspace backs out the last digit of the prefix.
  - (bugfix) Tabs opened by -remote now go behind existing dialogs.
  - (new feature 622) -dump-color-mode
  - (bugfix) Fix accesskeys so that they work when priority is 0
  - (enhancement) Text type-ahead searching: don't follow current link
    on enter
  - (bugfix) Take the terminal charset in account when comparing
    accesskeys.
  - (enhancement) Display accesskeys as e.g. (Alt-f), not just (f).
* Changes in user scripting
  - (enhancement) Guile: Read hooks.scm rather than internal-hooks.scm.
    (Keep reading user-hooks.scm, too.)
  - (bugfix) Lua: Don't write to the string returned by lua_tostring.
  - (bugfix 945) Lua: Don't crash if a script calls e.g. error(nil).